1.0.5
-----
Weeker typing requiredments for paging

1.0.4
-----
Fix namespace and SecureApiResourceController constructor

1.0.3
-----
Fix namespaces

1.0.1, 1.0.2
-----
- Update dependencies versions

1.0.0
-----

- Initial version:

IRepository
Base Repository implementation
Repository Exception